tests/type_errors/addition_is_restricted.sy
type A = foreign

def x
: A -> A
: a = a + a

--+ expected exit status: 3
--+ expected stderr:
--+ 
